--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 pytest==8.4.2
 selenium==4.35.0
+pytest-html==4.1.1
+pytest-excel==1.8.1
+openpyxl==3.1.5
+pytest-md-report==0.7.0
+pytest-playwright==0.7.1
+playwright==1.55.0
